--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -24,7 +24,7 @@ header-includes:
   # - \SetWatermarkText{DRAFT}
   # - \SetWatermarkScale{1}
 abstract: |
-  Modern computational tools such as dynamic linear modeling, machine learning and empirical dynamical modeling have fundamentally transformed many aspects of our society by providing previously impossible levels of predictive accuracy to tasks from digital advertising to weather forecasting. However, these methods are underutilized for predicting and managing natural resources and ecological systems. Forecasts of fish populations are an integral part of many management systems, and are often used by the fishing and processing sectors to make business plans. Almost all fish forecasts are currently based on population dynamics using estimates of birth rates and survival from recent years. Salmon are an ecological, cultural, and economic keystone of Alaska, and forecasts of salmon runs are used by fish processors to inform staffing and supply decisions, and even to determine whether to operate for the fishing fleets. These forecast are also used by harvesters to inform spatial effort allocation decisions and determine crew size. Although valuable, these predictions are challenging given the complex set of dynamic factors that affect numbers of returning salmon, from egg production to predation to the environmental drivers of salmon survival in marine and freshwater habitats. We utilize data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forcasting tools, to attempt to identify the frontiers in forecast accuracy possible given currently available data. By leveraging environmental data and correlations between distinct salmon popualtions, combinations of modern computational tools were able to reduce out-of-sample error by on average 12% for age-specific forecasts, and 19% for river-specific forecasts. Yet, there were some observations that were not accurately forecasted by any method. Given the flexible nature and varrying assumptions of our evaluated models, these isolated collective forecast failures help identify when forecast performance is limited by model specification versus the constraints imposed by the nature and quality of available data. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems. 
+  Modern computational tools such as dynamic linear modeling, machine learning and empirical dynamical modeling have fundamentally transformed many aspects of our society by providing previously impossible levels of predictive accuracy to tasks from digital advertising to weather forecasting. However, these methods are underutilized for predicting and managing natural resources and ecological systems. Forecasts of fish populations are an integral part of many management systems, and are often used by the fishing and processing sectors to make business plans. Almost all fish forecasts are currently based on population dynamics using estimates of birth rates and survival from recent years. Salmon are an ecological, cultural, and economic keystone of Alaska, and forecasts of salmon runs are used by fish processors to inform staffing and supply decisions, and even to determine whether to operate for the fishing fleets. These forecast are also used by harvesters to inform spatial effort allocation decisions and determine crew size. Although valuable, these predictions are challenging given the complex set of dynamic factors that affect numbers of returning salmon, from egg production to predation to the environmental drivers of salmon survival in marine and freshwater habitats. We utilize data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to attempt to identify the frontiers in forecast accuracy possible given currently available data. By leveraging environmental data and correlations between distinct salmon populations, combinations of modern computational tools were able to reduce out-of-sample error by on average 12% for age-specific forecasts, and 19% for river-specific forecasts. Yet, there were some observations that were not accurately predicted by any method. Given the flexible nature and varying assumptions of our evaluated models, these isolated collective forecast failures help identify when forecast performance is limited by model specification versus the constraints imposed by the nature and quality of available data. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems. 
 ---
 
 ```{r setup, include=FALSE}
@@ -444,7 +444,7 @@ We evaluated two different machine learning models: a random forest (rand_forest
 
 Each of the machine learning methods had access to a variety of population and environmental data. We fit versions of each model separately for each age group in each major river system. Within that river system, the candidate predictor variables included the sibling returns for the cohort in question in all river systems, the numbers of the cohort that spawned the cohort in question, along with the cumulative mean environmental conditions (sea surface temperature, pacific decadal oscillation, sea surface air pressure, and degree of upwelling) over the years the cohort spent at sea, and the reported numbers of chum and pink salmon throughout the North Pacific reported by Ruggerone et al. [@ruggerone2018]. 
 
-Models were fit at the level of age groups by river system. Data were first split into training and testing sets. We then split each of the training sets (e.g. all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70% of the training year to fit a model, and the remaining 30% to evaluate the performance of that model, followed by the first 75% and 25%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees. We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the root-mean squared error (RMSE) of the predictions on the assessment splits (see computational environmenta available athttps://github.com/DanOvando/salmon-forecast-paper/ for detailed steps in this process). 
+Models were fit at the level of age groups by river system. Data were first split into training and testing sets. We then split each of the training sets (e.g. all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70% of the training year to fit a model, and the remaining 30% to evaluate the performance of that model, followed by the first 75% and 25%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees. We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the root-mean squared error (RMSE) of the predictions on the assessment splits (see computational environment available at https://github.com/DanOvando/salmon-forecast-paper/ for detailed steps in this process). 
 
 Once the set of tuning parameters for each training set were selected, we then fit the final model using all the training data with those tuned parameters, and then used that model to predict the returns in the testing set.  All relevant data transformations were prepared only on training / analysis splits (e.g. means and standard deviations for centering and scaling) and then applied to testing / assessment splits. 
 
@@ -501,7 +501,7 @@ The FRI ensemble forecast values were pulled from the historic pre-season foreca
 
 # Data Availability
 
-All data, code, and package dependencies needed to fully reproduce our results are publically available at www.github.com/danovando/salmon-forecast-paper. 
+All data, code, and package dependencies needed to fully reproduce our results are publicly available at www.github.com/danovando/salmon-forecast-paper. 
 
 # References
 <div id="refs"></div>
