--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -16,7 +16,7 @@ output:
 bibliography: "../references.bib"
 csl: pnas.csl
 params: 
-  results_name: ["v1.0.0.9000"]
+  results_name: ["v1.0.1.9000"]
 linkcolor: blue
 toc: true
 header-includes:
@@ -26,7 +26,7 @@ header-includes:
   # - \SetWatermarkText{DRAFT}
   # - \SetWatermarkScale{1}
 abstract: |
-  Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and forecasts of salmon runs are used by fish processors to inform staffing and supply decisions. These predictions are challenging given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average 19%. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
+  Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average 19%. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
 ---
 
 ```{r setup, include=FALSE}
@@ -67,6 +67,46 @@ load(file = file.path(results_dir, "forecasts.RData"))
 ```
 
 <!-- Modern computational tools such as dynamic linear modeling, machine learning and empirical dynamical modeling have fundamentally transformed many aspects of our society by providing previously impossible levels of predictive accuracy to tasks from digital advertising to weather forecasting. However, these methods are underutilized for predicting and managing natural resources and ecological systems. Forecasts of fish populations are an integral part of many management systems, and are often used by the fishing and processing sectors to make business plans. Almost all fish forecasts are currently based on population dynamics using estimates of birth rates and survival from recent years. Salmon are an ecological, cultural, and economic keystone of Alaska, and forecasts of salmon runs are used by fish processors to inform staffing and supply decisions, and even to determine whether to operate for the fishing fleets. These forecast are also used by harvesters to inform spatial effort allocation decisions and determine crew size. Although valuable, these predictions are challenging given the complex set of dynamic factors that affect numbers of returning salmon, from egg production to predation to the environmental drivers of salmon survival in marine and freshwater habitats. We utilize data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to attempt to identify the frontiers in forecast accuracy possible given currently available data. By leveraging environmental data and correlations between distinct salmon populations, combinations of modern computational tools were able to reduce out-of-sample error by on average 12% for age-specific forecasts, and 19% for river-specific forecasts. Yet, there were some observations that were not accurately predicted by any method. Given the flexible nature and varying assumptions of our evaluated models, these isolated collective forecast failures help identify when forecast performance is limited by model specification versus the constraints imposed by the nature and quality of available data. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.  -->
+
+\newpage
+
+# Title Page{-}
+ 
+## Author Line{-}
+
+Daniel Ovando^a^*, Curry Cunningham^b^,Peter Kuriyama^c^,Christopher Boatright^a^, Ray Hilborn ^a^
+
+## Author Affiliations{-}
+
+^a^School of Aquatic and Fishery Sciences
+University of Washington
+1122 NE Boat St, Box 355020 Seattle, WA 98195-5020
+
+^b^College of Fisheries and Ocean Sciences
+University of Alaska Fairbanks
+17101 Point Lena Loop Road
+Juneau, AK 99801
+
+^c^NOAA Fisheries Southwest Fisheries Science Center
+8901 La Jolla Shores Dr, La Jolla, CA 92037
+## Corresponding Author{-}
+*Correspondence should be addressed to Daniel Ovando at [danovan\@uw.edu](mailto:danovan@uw.edu){.email}
+
+## Classification{-}
+Biological Sciences > Population Biology
+
+## Keywords{-}
+Machine learning, predictive modeling, salmon, ecological forecasting, value of information
+
+\newpage
+
+## Abstract{-}
+
+Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average 19%. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
+
+## Significance Statement{-}
+
+The sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska are economic and ecological marvels, playing key roles in the ecosystems of Alaska and supporting the largest commercial salmon fishery in the world. Pre-season forecasts of the annual returns of these fish are important to both managers and fishing fleets. Computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Using modern computational tools we were able to substantially increase the accuracy of pre-season forecasts for the Bristol Bay sockeye salmon fishery. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
 
 # Introduction
 
@@ -113,11 +153,11 @@ We hypothesize that directly incorporating data on candidate potentially time-va
 
 We judged the performance of all of our models by scaled root mean squared error (SRMSE). RMSE is calculated as
 
-$$ RMSE_m = \sqrt{\frac{1}{I}\sum\limits_{i = 1}^I(y_{i} - f_{i,m})^2} $$
+$$RMSE_m = \sqrt{\frac{1}{I}\sum\limits_{i = 1}^I(y_{i} - f_{i,m})^2}$$
 
 where *i* represents an observation of numbers of returning salmon *y* and the forecast for those numbers *f* by a given model *m*. In the manner of mean absolute scaled error (MASE, [@hyndman2006]), we scale each models RMSE for a given resolution by the RMSE of a lag-1 model for the same resolution (for example at the river system level).
 
-$$RMSE_{l1} = \sqrt{\frac{1}{I}\sum\limits_{i = 1}^I(y_{i} - y_{i,l1})^2} $$
+$$RMSE_{l1} = \sqrt{\frac{1}{I}\sum\limits_{i = 1}^I(y_{i} - y_{i,l1})^2}$$
 
 and SRMSE for model *m* is then
 
@@ -353,7 +393,7 @@ The field of ecology is generally concerned with developing theories and evidenc
 
 Accurate forecasts are a crucial part of natural resource management, a task made increasingly challenging by climate change. Our gains in forecast accuracy for the economically and ecologically critical Bristol Bay sockeye salmon fishery demonstrate the ability of modern computational tools to make meaningful improvements in predictive ability for the abundance of natural populations faced with a rapidly changing environment. By combining multiple modern computational tools we are able to identify likely frontiers in forecast performance given currently available data. However, even for this relatively robust dataset we were fundamentally unable to predict the returns of particular river systems and age classes in certain years. The collective failure of multiple methods in specific time steps and locations helps clarify instances in which the only likely path to meaningful forecast improvement is collection of additional data, while also highlighting the potentially irreducible impact of observation error on the limits of forecast performance. It is critical that we allocate resources to both the advancement of predictive modeling methods in ecology, and to the hard work of collecting the data from the natural world that are the foundation of any successful forecasting efforts.
 
-# Methods
+# Materials and Methods
 
 All code and data needed to fully replicate our results are publicly available at <https://github.com/DanOvando/salmon-forecast-paper/>. We describe critical details of each our main methods here. All models were compared based upon one-step-ahead forecast skill, defined here by SRMSE. Each of the evaluated models generate forecasts at the resolution of age group and river system in a given year. Forecasts for a given year are produced by a model trained on all years after 1963 and prior to the year for which a forecast is desired. This is performed in a rolling fashion, such that for example forecasts for the year 2018 are produced by a model trained on data from 1963 to 2017, the 2019 forecast by a model trained on data from 1963 to 2018, and so on. Each method has its own ways of tuning and validating the model, but all such steps are performed using only the training data: all data for the forecast year are held out until the final prediction.
 
@@ -395,27 +435,24 @@ We used s-maps for each of the river, age-class combinations. For example, we pr
 
 The FRI ensemble forecast values were pulled from the historic pre-season forecasts as published. For the boosted regression tree ensemble, we follow a similar routine to that employed for the individual boosted regression tree model. We compiled the pre-season forecasts by river system and age group for each of the candidate models going back to 1991. The ensemble sought to predict the observed total returns by river system using the returns by river system and age class produced by each of the candidate models. For the years 2000 to 2019, we performed a series rolling model fits, where data before the testing year was held out for training (and analysis and assessment splitting and model tuning), and then used fit the ensemble model, which was then tested on the testing year. The held-out one-year-ahead predictions of the ensemble model in each time step were then compiled to create the historic series of ensemble forecasts at the river system level.
 
-# Data Availability
-
-All data, code, and package dependencies needed to fully reproduce our results are publicly available at www.github.com/danovando/salmon-forecast-paper.
 
 # Funding
 
 Funding for this study was provided by the Bristol Bay Regional Seafood Development Association, by the Bristol Bay Seafood Processors, and by Douglas and Joyce McCallum.
 
-# Competing Interests
+# Data Availability
 
-R.H's research program receives funding from environmental NGOs, foundations, fishing industry, governments and international agencies. All of these can be interpreted as a conflict of interest when evaluating fisheries policy.
+All data, code, and package dependencies needed to fully reproduce our results are publicly available at www.github.com/danovando/salmon-forecast-paper.
 
-# Author Contributions
+<!-- # Competing Interests -->
 
-D.O, C.C., and P.C. developed the data, models and code needed to produce results. R.H. and C.B. assisted in the framing of research questions and interpretation of data and results. All authors contributed to the writing of the manuscript.
+<!-- R.H's research program receives funding from environmental NGOs, foundations, fishing industry, governments and international agencies. All of these can be interpreted as a conflict of interest when evaluating fisheries policy. -->
 
-# Materials & Correspondence.
 
-Correspondence should be addressed to Dan Ovando at [danovan\@uw.edu](mailto:danovan@uw.edu){.email}
+<!-- # Materials & Correspondence. -->
 
-Materials can be accessed at www.github.com/danovando/salmon-forecast-paper
+
+<!-- Materials can be accessed at www.github.com/danovando/salmon-forecast-paper -->
 
 # References
 
